Fix for context menu on calendar being too small sometimes

--- a/airtime_mvc/public/css/styles.css
+++ b/airtime_mvc/public/css/styles.css
@@ -3321,6 +3321,7 @@ dd .stream-status {
     color: white;
 }
 
-.context-menu-list {
-    width: 200px !important;
+.calendar-context-menu {
+    min-width: 200px !important;
 }
+
